# MessengerApp

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.c  utils.c  utils.h
app/src/main/java/com/example/myapplication/: App.kt  ChatActivity.kt  ChatItem.kt  ChatRecyclerAdapter.kt  DbHelper.kt  ImageViewerActivity.kt  MainActivity.kt  (+2 more)
app/src/main/java/hev/htproxy/: TProxyService.kt
app/src/main/jni/: Application.mk
app/src/main/res/drawable/: bubble_received.xml  bubble_sent.xml  camera_badge_background.xml  ic_arrow_down.xml  ic_arrow_up.xml  ic_attach.xml  ic_delete.xml  ic_edit.xml  ic_forward.xml  ic_logout.xml  ic_mic.xml  ic_mic_recording.xml  ic_notification.xml  ic_reply.xml  ic_search.xml  ic_shield.xml  ic_star.xml  ic_theme.xml  input_background.xml  recording_dot.xml  scroll_down_background.xml  unread_badge.xml
app/src/main/res/layout/: activity_auth.xml  activity_chat.xml  activity_chat_list.xml  activity_favorites.xml  activity_image_viewer.xml  activity_main.xml  activity_profile.xml  activity_splash.xml  item_chat.xml  item_favorite_message.xml  item_message.xml  item_message_audio.xml  item_message_date.xml  item_message_image.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: color.xml  themes.xml
app/src/main/res/values/values-night./: color.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+54 files in other folders)
